# NCEEHelper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GetStarted.md  README.md  ToDoList.md  requirements.txt
DataBase/Biology/: Fill.json  Judge.json
DataBase/English/: Cast.json  filter.txt
Note/: markdown-pdf.css
Note/Biology/: 武汉新型冠状病毒考题预测.md
Note/Chemistry/: 元素特性.md  化学与生产实践.md  题型归纳.md
Note/Chinese/: 1月24日时评关键词整理.txt  5月31日时评关键词整理.txt  书写.md  华为心声社区.url  名言积累.md  时评关键词整理.md  阅读.md
Note/Chinese/作文素材/: 2019年国家最高科学技术奖.md  两弹一星历史研究会.url  习近平重要讲话.md  武汉新型冠状病毒.md  积累.md
Note/English/: 作文模块化表达.md  牛津同类词学习.md
Note/English/成篇作文/: CRH.md  Change4.md  ChineseIdioms.md  DragonBoatRace.md  SportsMeeting.md
Note/Math/: 圆锥曲线、数列、导数压轴.md  大题规范表达.md  数学整理.md  数学竞赛方法整理.md
Note/Physics/: 物理大题规范表达.md  物理概念与二级结论.md  物理竞赛方法整理.md
Note/gugugu/: readme.md
Script/Analyser/: ANCCompare.py  ChineseFilter.py  ChineseWordCount.py  EnglishCoverage.py  EnglishWordCount.py  Lemmatizer.py  ReadWordDict.py  WenYanCount.py
Script/Spider/: GuangMing.py  HuanQiu.py  People.py  ReaderDigest.py  Science.py  UpdateAll.py  XinHua.py
Script/Tool/: analyser.py  md2pdf.py
Src/: CMakeLists.txt
Src/Biology/: CMakeLists.txt  main.cpp
Src/English/: CMakeLists.txt  Speaker.cpp  main.cpp
Src/NCEEHelper/: Analyser.cpp  Builtin.cpp  CMakeLists.txt  Common.cpp  Common.hpp  FillTester.cpp  ImportanceSampler.cpp  JsonConfig.cpp  JudgeTester.cpp  Printer.cpp  TestDriver.cpp  main.cpp
Src/Shared/: Command.hpp  Config.hpp  KnowledgeLibrary.hpp  KnowledgePoint.hpp  Shared.hpp  TestEngine.hpp  Tester.hpp
Urls/: 100单词词根.url  25个熟词生义.url  ALG不等式.url  习近平重要讲话数据库.url  圆锥曲线中的优化算法zhihu.url  总有一点数学小感悟zhihu.url  数学其实没那么难zhihu.url  数学快速解题技巧.url  李泽宇数学.url  浅谈圆锥曲线中的高级技巧.url  维克多英语.url  阅读出处.url
