cmake_minimum_required (VERSION 3.8)
find_package(pybind11 CONFIG REQUIRED)
find_package(crossguid CONFIG REQUIRED)
find_package(icu REQUIRED)
add_link_options("/DELAYLOAD:icudt61.dll")
add_link_options("/DELAYLOAD:icuin61.dll")
add_link_options("/DELAYLOAD:icuio61.dll")
add_link_options("/DELAYLOAD:icuuc61.dll")
add_link_options("/DELAYLOAD:icutu61.dll")
aux_source_directory(. SOURCE)
add_library (English SHARED ${SOURCE})
target_link_libraries(English Bus)
target_link_libraries(English pybind11::embed)
target_link_libraries(English crossguid)
find_library(ICUDT icudt)
target_link_libraries(English ${ICUDT})
find_library(ICUUC icuuc)
target_link_libraries(English ${ICUUC})
find_library(ICUIO icuio)
target_link_libraries(English ${ICUIO})
find_library(ICUIN icuin)
target_link_libraries(English ${ICUIN})
find_library(ICUTU icutu)
target_link_libraries(English ${ICUTU})
install (TARGETS English RUNTIME DESTINATION Plugins/English)
