cmake_minimum_required (VERSION 3.8)
find_package(nlohmann_json REQUIRED)
find_package(cxxopts REQUIRED)
find_package(icu REQUIRED)
find_path(UTFCPP_INCLUDE_DIR utf8.h)
include_directories(${UTFCPP_INCLUDE_DIR})
aux_source_directory(. SOURCE)
add_executable (NCEEHelper ${SOURCE})
target_link_libraries(NCEEHelper Bus)
install (TARGETS NCEEHelper DESTINATION .)
